设置修改时，group凹陷效果；解决点击按钮某些手机背景色问题

--- a/widget/html/dupHistoryList.html
+++ b/widget/html/dupHistoryList.html
@@ -67,7 +67,7 @@ var apiready = function() {
             borderColor: '#f0f0f0',
             item: {
                 bgColor: '#FFF',
-                activeBgColor: '#d5d7dc',
+                activeBgColor: '#6f96d1',
                 height: 80,
                 imgWidth: 40,
                 imgHeight: 40,
