--- a/widget/html/historyFrame.html
+++ b/widget/html/historyFrame.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="groupName">诊疗</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field" onclick="openPicker('consultation_department');">
                     <div class="key">会诊科室</div>
                     <div class="value">
