--- a/widget/html/patientFrame.html
+++ b/widget/html/patientFrame.html
@@ -26,7 +26,7 @@
         </header>
         <div id="main" class="flex-con">
             <div class="groupName">基本信息</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">姓名</div>
                     <div class="value">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="groupName">编号</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">住院号</div>
                     <div class="value">
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="groupName">联系方式</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">电话</div>
                     <div class="value">
