--- a/widget/html/followupList.html
+++ b/widget/html/followupList.html
@@ -88,7 +88,7 @@ apiready = function() {
             borderColor: '#f0f0f0',
             item: {
                 bgColor: '#FFF',
-                activeBgColor: '#d5d7dc',
+                activeBgColor: '#6f96d1',
                 height: 80,
                 imgWidth: 40,
                 imgHeight: 40,
