--- a/widget/html/physicalFrame.html
+++ b/widget/html/physicalFrame.html
@@ -63,7 +63,7 @@
                 </div>
             </div> -->
             <div class="groupName">裸眼视力</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">Vod</div>
                     <div class="value">
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="groupName">矫正视力</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">Vod</div>
                     <div class="value">
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="groupName">眼压</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">Tod</div>
                     <div class="value_with_unit">
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="groupName">其他</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">外眼</div>
                     <div class="value">
