--- a/widget/html/followupFrame.html
+++ b/widget/html/followupFrame.html
@@ -30,100 +30,19 @@
                 <div class="field textarea_field bottom">
                     <div class="textarea_key">病情</div>
                     <div class="textarea_value">
-                        <textarea id="treatment"></textarea>
+                        <textarea id="condition"></textarea>
                     </div>
                 </div>
             </div>
-            <div class="groupName">裸眼视力</div>
+            <div class="groupName">检查</div>
             <div class="group">
-                <div class="field">
-                    <div class="key">Vod</div>
-                    <div class="value">
-                        <input type="text" id="vod" />
-                    </div>
+                <div class="field" onclick="openWin('physical');">
+                    <div class="key">体检信息</div>
+                    <div class="value more"><span>&gt;</span></div>
                 </div>
                 <div class="field bottom">
-                    <div class="key">Vos</div>
-                    <div class="value">
-                        <input type="text" id="vos" />
-                    </div>
-                </div>
-            </div>
-            <div class="groupName">矫正视力</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">Vod</div>
-                    <div class="value">
-                        <input type="text" id="corrected_vod" />
-                    </div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">Vos</div>
-                    <div class="value">
-                        <input type="text" id="corrected_vos" />
-                    </div>
-                </div>
-            </div>
-            <div class="groupName">眼压</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">Tod</div>
-                    <div class="value_with_unit">
-                        <input type="text" id="tod" />
-                    </div>
-                    <div class="unit">mmHg</div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">Tos</div>
-                    <div class="value_with_unit">
-                        <input type="text" id="tos" />
-                    </div>
-                    <div class="unit">mmHg</div>
-                </div>
-            </div>
-            <div class="groupName">其他</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">外眼</div>
-                    <div class="value">
-                        <input type="text" id="outer_eye" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">结膜</div>
-                    <div class="value">
-                        <input type="text" id="conjunctiva" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">角膜</div>
-                    <div class="value">
-                        <input type="text" id="cornea" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">前房</div>
-                    <div class="value">
-                        <input type="text" id="anterior_chamber" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">晶体</div>
-                    <div class="value">
-                        <input type="text" id="lens" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">玻璃体</div>
-                    <div class="value">
-                        <input type="text" id="vitreous" />
-                    </div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">眼底</div>
-                    <div class="value">
-                        <input type="text" id="eyeground" />
-                    </div>
+                    <div class="key">辅助检查</div>
+                    <div class="value more"><span>&gt;</span></div>
                 </div>
             </div>
         </div>
@@ -141,74 +60,52 @@ apiready = function() {
     }
 
     history_id = api.pageParam.history_id;
-    follow_up = api.pageParam.follow_up;
-    index = api.pageParam.index;
-    size = api.pageParam.size;
+    follow_up_id = api.pageParam.follow_up_id;
+    physical_id = "";
+    data = {};
     type = "";
-    if (index != undefined && index != null) {
+
+    if (follow_up_id != "" && follow_up_id != undefined && follow_up_id != null) {
         type = "modi";
-        $api.byId('follow_up_date').value = follow_up[index].follow_up_date;
-        $api.byId('follow_up_info').value = follow_up[index].follow_up_info;
     }
-
-    $api.attr($api.byId('follow_up_date'), 'readonly', 'true');
-    if (type != "modi") {
-        $api.byId('follow_up_date').value = getDate();
+    if (type == "modi") {
+        data = getFollowUp(follow_up_id);
+        history_id = data.history_id;
+        physical_id = data.physical_pointer;
     }
-
-    api.addEventListener({
-        name: 'returnBirthday'
-    }, function(ret, err) {
-        if (ret) {
-            $api.byId('follow_up_date').value = ret.value.birthday;
-        }
-    });
 }
 
 function saveFollowUp() {
-    if ($api.byId('follow_up_info').value == "") {
-        alert("请输入随访内容");
-        return;
-    }
-    showProgress();
-    follow_up_item = {
-        "follow_up_date": $api.byId('follow_up_date').value,
-        "follow_up_info": $api.byId('follow_up_info').value
-    }
 
-    if (type == "modi") {
-        follow_up[index] = follow_up_item;
-    } else {
-        if (follow_up != undefined) {
-            follow_up.push(follow_up_item);
-        } else {
-            follow_up = [];
-            follow_up[0] = follow_up_item;
-        }
-    }
+}
 
-    model = api.require('model');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
-    model.updateById({
-        class: 'caseHistory',
-        id: history_id,
-        value: {
-            follow_up: follow_up
+function openWin(type) {
+    var data = {};
+    switch (type) {
+        case 'physical':
+            data = {
+                "source": "follow_up",
+                "id": physical_id
+            };
+            break;
+        default:
+            break;
+    }
+    api.openWin({
+        name: type,
+        url: './' + type + '.html',
+        pageParam: {
+            data: data
+        },
+        reload: true,
+        bounces: false,
+        vScrollBarEnabled: false,
+        animation: {
+            type: "movein",
+            subType: "from_right",
+            duration: 300
         }
-    }, function(ret, err) {
-        if (ret) {
-            followupAddOrModiEvent(follow_up);
-            hideProgress();
-            api.closeWin();
-        } else {
-            alert("保存随访信息失败！" + JSON.stringify(err));
-            hideProgress();
-        }
-    });
+    })
 }
 </script>
 
