--- a/widget/html/patient/patientFrame.html
+++ b/widget/html/patient/patientFrame.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>患者维护</title>
-    <link rel="stylesheet" type="text/css" href="../css/history.css" />
-    <link rel="stylesheet" type="text/css" href="../css/button.css" />
-    <script type="text/javascript" src="../script/api.js"></script>
-    <script type="text/javascript" src="../script/util.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/history.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/button.css" />
+    <script type="text/javascript" src="../../script/api.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
+    <script type="text/javascript" src="../../script/util.js"></script>
 </head>
 
 <body class="body-silver">
@@ -112,7 +113,8 @@ apiready = function() {
     userName = $api.getStorage("userName");
 
     history_id = api.pageParam.data.history_id;
-    patient_id = api.pageParam.data.id;
+    patient_id = api.pageParam.data.patient_id;
+    alert(history_id);
     type = "";
 
     if (patient_id != undefined && patient_id != null && patient_id != "") {
