--- a/widget/html/history/historyFrame.html
+++ b/widget/html/history/historyFrame.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>病历维护</title>
-    <link rel="stylesheet" type="text/css" href="../css/history.css" />
-    <link rel="stylesheet" type="text/css" href="../css/button.css" />
-    <script type="text/javascript" src="../script/api.js"></script>
-    <script type="text/javascript" src="../script/util.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/history.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/button.css" />
+    <script type="text/javascript" src="../../script/api.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
+    <script type="text/javascript" src="../../script/util.js"></script>
 </head>
 
 <body class="body-silver">
@@ -84,11 +85,17 @@ apiready = function() {
     }
 
     userName = $api.getStorage("userName");
-
-    history_id = "";
+    history_id = api.pageParam.history_id;
     patient_id = "";
     physical_id = "";
-    data = [];
+    data = {};
+    if (history_id == undefined || history_id == "") {
+        // history_id = newHistory(userName);
+        newHistory(userName, setHistoryId());
+    } else {
+        data = getHistory(history_id);
+        alert(JSON.stringify(data));
+    }
 
     // 会诊科室使用选择器
     $api.attr($api.byId('consultation_department'), 'readonly', 'true');
@@ -102,29 +109,29 @@ apiready = function() {
     });
 
     // 如果是修改，则先查询
-    type = api.pageParam.type;
-    if (type == "modi") {
-        history_id = api.pageParam.history_id;
-        getHistory(history_id);
-    }
+    // type = api.pageParam.type;
+    // if (type == "modi") {
+    //     history_id = api.pageParam.history_id;
+    //     getHistory(history_id);
+    // }
 
     // 新增患者信息，本页面需要知道patient_id
-    api.addEventListener({
-        name: 'patientAddEvent'
-    }, function(ret, err) {
-        if (ret && ret.value) {
-            patient_id = ret.value.patient_id;
-        }
-    });
+    // api.addEventListener({
+    //     name: 'patientAddEvent'
+    // }, function(ret, err) {
+    //     if (ret && ret.value) {
+    //         patient_id = ret.value.patient_id;
+    //     }
+    // });
 
     // 新增体检信息，本页面需要知道physical_id
-    api.addEventListener({
-        name: 'physicalAddEvent'
-    }, function(ret, err) {
-        if (ret && ret.value) {
-            physical_id = ret.value.physical_id;
-        }
-    });
+    // api.addEventListener({
+    //     name: 'physicalAddEvent'
+    // }, function(ret, err) {
+    //     if (ret && ret.value) {
+    //         physical_id = ret.value.physical_id;
+    //     }
+    // });
 }
 
 /**
@@ -132,36 +139,7 @@ apiready = function() {
  * @param  {[type]} history_id [description]
  * @return {[type]}            [description]
  */
-function getHistory(history_id) {
-    showProgress();
-    model = api.require('model');
-    query = api.require('query');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
-    query.createQuery(function(ret, err) {
-        if (ret && ret.qid) {
-            model.findById({
-                class: "caseHistory",
-                id: history_id
-            }, function(ret, err) {
-                if (err) {
-                    hideProgress();
-                    alert(JSON.stringify(err));
-                } else {
-                    if (ret) {
-                        hideProgress();
-                        setHistory(ret);
-                        patient_id = ret.patient_pointer;
-                        physical_id = ret.physical_pointer;
-                    }
-                }
-            });
-        }
-    });
-}
+
 
 /**
  * [saveHistory 保存病历信息]
@@ -244,15 +222,20 @@ function saveHistory() {
  */
 function openWin(type) {
     var data = {};
+    alert(history_id);
     switch (type) {
         case 'patient':
+            page = "../patient/patient"
             data = {
-                "id": patient_id
+                "history_id": history_id,
+                "patient_id": patient_id
             };
             break;
         case 'physical':
+            page = "../physical/physical"
             data = {
-                "id": physical_id
+                "history_id": history_id,
+                "physical_id": physical_id
             };
             break;
         default:
@@ -260,18 +243,18 @@ function openWin(type) {
     }
     api.openWin({
         name: type,
-        url: './' + type + '.html',
+        url: './' + page + '.html',
         pageParam: {
             data: data
         },
         reload: true,
         bounces: false,
         vScrollBarEnabled: false,
-        animation: {
-            type: "movein",
-            subType: "from_right",
-            duration: 300
-        }
+        // animation: {
+        //     type: "movein",
+        //     subType: "from_right",
+        //     duration: 300
+        // }
     })
 }
 
