--- a/widget/login.html
+++ b/widget/login.html
@@ -20,8 +20,9 @@
         <meta name="viewport" content="width=device-width">
         <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="script/api.js"></script>
-        <script type="text/javascript" src="script/index.js"></script>
+        <script type="text/javascript" src="script/login.js"></script>
         <script type="text/javascript" src="script/util.js"></script>
+        <script type="text/javascript" src="script/constants.js"></script>
     </head>
 
     <body>
@@ -39,8 +40,6 @@
             <h5><a href="#" tapmode="" onclick="register();">注册</a></h5>
         </section>
         <div style="text-align:center;clear:both">
-            <!-- <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script> -->
-            <!-- <script src="/follow.js" type="text/javascript"></script> -->
         </div>
     </body>
 
