准备使用本地存储保存浏览及修改状态的病历信息，最后一次保存到云端

--- a/widget/html/followup/followupList.html
+++ b/widget/html/followup/followupList.html
@@ -234,7 +234,7 @@ function viewFollowUp(follow_up_id) {
             follow_up_id: follow_up_id
         },
         vScrollBarEnabled: false,
-        reload: true,
+        reload: false,
         bounces: false
     });
 }
@@ -260,7 +260,7 @@ function modiFollowUp(index) {
             follow_up_id: follow_up_id
         },
         vScrollBarEnabled: false,
-        reload: true,
+        reload: false,
         bounces: false
     });
 }
