--- a/widget/html/history/viewHistory.html
+++ b/widget/html/history/viewHistory.html
@@ -162,7 +162,7 @@ function getHistory(history_id) {
  * @return {[type]}      [description]
  */
 function openWin(type) {
-    var reload = true;
+    var reload = false;
     var pageParam = {};
     var animation = null;
     var page = "";
