--- a/widget/html/picker/birthdayPickerFrame.html
+++ b/widget/html/picker/birthdayPickerFrame.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/picker.css" />
     <link rel="stylesheet" type="text/css" href="../../css/button.css" />
     <script type="text/javascript" src="../../script/api.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
     <script type="text/javascript" src="../../script/util.js"></script>
 </head>
 
