--- a/widget/html/history/historyFrame.html
+++ b/widget/html/history/historyFrame.html
@@ -84,17 +84,23 @@ apiready = function() {
         api.closeWin();
     }
 
+    model = api.require('model');
+    query = api.require('query');
+    model.config({
+        appId: historyConstants.appId,
+        appKey: historyConstants.appKey,
+        host: historyConstants.host
+    });
+
     userName = $api.getStorage("userName");
     history_id = api.pageParam.history_id;
     patient_id = "";
     physical_id = "";
     data = {};
     if (history_id == undefined || history_id == "") {
-        // history_id = newHistory(userName);
-        newHistory(userName, setHistoryId());
+        newHistory(userName);
     } else {
-        data = getHistory(history_id);
-        alert(JSON.stringify(data));
+        getHistory(history_id);
     }
 
     // 会诊科室使用选择器
@@ -108,37 +114,67 @@ apiready = function() {
         }
     });
 
-    // 如果是修改，则先查询
-    // type = api.pageParam.type;
-    // if (type == "modi") {
-    //     history_id = api.pageParam.history_id;
-    //     getHistory(history_id);
-    // }
-
     // 新增患者信息，本页面需要知道patient_id
-    // api.addEventListener({
-    //     name: 'patientAddEvent'
-    // }, function(ret, err) {
-    //     if (ret && ret.value) {
-    //         patient_id = ret.value.patient_id;
-    //     }
-    // });
+    api.addEventListener({
+        name: 'patientAddEvent'
+    }, function(ret, err) {
+        if (ret && ret.value) {
+            patient_id = ret.value.patient_id;
+        }
+    });
 
     // 新增体检信息，本页面需要知道physical_id
-    // api.addEventListener({
-    //     name: 'physicalAddEvent'
-    // }, function(ret, err) {
-    //     if (ret && ret.value) {
-    //         physical_id = ret.value.physical_id;
-    //     }
-    // });
+    api.addEventListener({
+        name: 'physicalAddEvent'
+    }, function(ret, err) {
+        if (ret && ret.value) {
+            physical_id = ret.value.physical_id;
+        }
+    });
 }
 
-/**
- * [getHistory description]
- * @param  {[type]} history_id [description]
- * @return {[type]}            [description]
- */
+function newHistory(userName) {
+    showProgress("初始化...");
+
+    model.insert({
+        class: historyConstants.historyTable,
+        value: {
+            record_doctor: userName,
+        }
+    }, function(ret, err) {
+        hideProgress();
+        if (ret) {
+            history_id = ret.id;
+        } else {
+            alert("初始化病历失败！");
+        }
+    });
+}
+
+function getHistory(history_id) {
+    showProgress();
+
+    query.createQuery(function(ret, err) {
+        if (ret && ret.qid) {
+            model.findById({
+                class: historyConstants.historyTable,
+                id: history_id
+            }, function(ret, err) {
+                hideProgress();
+                if (err) {
+                    alert(JSON.stringify(err));
+                } else {
+                    if (ret) {
+                        data = ret;
+                        setHistory(data);
+                        patient_id = data.patient_pointer;
+                        physical_id = data.physical_pointer;
+                    }
+                }
+            });
+        }
+    });
+}
 
 
 /**
@@ -158,61 +194,29 @@ function saveHistory() {
     var diagnosis = $api.byId('diagnosis');
     var treatment = $api.byId('treatment');
 
-    var model = api.require('model');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
+    model.updateById({
+        class: 'caseHistory',
+        id: history_id,
+        value: {
+            consultation_department: consultation_department.value,
+            chief_complaint: chief_complaint.value,
+            diagnosis: diagnosis.value,
+            treatment: treatment.value,
+            patient_pointer: patient_id,
+            physical_pointer: physical_id
+        }
+    }, function(ret, err) {
+        hideProgress();
+        if (ret) {
+            api.toast({
+                msg: "保存病历成功！"
+            });
+            historyModiEvent(history_id);
+            api.closeWin();
+        } else {
+            alert("保存病历失败！");
+        }
     });
-    if (type == "modi") {
-        model.updateById({
-            class: 'caseHistory',
-            id: history_id,
-            value: {
-                consultation_department: consultation_department.value,
-                chief_complaint: chief_complaint.value,
-                diagnosis: diagnosis.value,
-                treatment: treatment.value,
-                physical_pointer: physical_id
-            }
-        }, function(ret, err) {
-            if (ret) {
-                api.toast({
-                    msg: "修改病历成功！"
-                });
-                historyModiEvent(history_id);
-                api.closeWin();
-            } else {
-                alert("修改病历失败！");
-            }
-            hideProgress();
-        });
-    } else {
-        model.insert({
-            class: 'caseHistory',
-            value: {
-                record_date: getDate(),
-                consultation_department: consultation_department.value,
-                chief_complaint: chief_complaint.value,
-                diagnosis: diagnosis.value,
-                treatment: treatment.value,
-                record_doctor: userName,
-                patient_pointer: patient_id,
-                physical_pointer: physical_id
-            }
-        }, function(ret, err) {
-            if (ret) {
-                api.toast({
-                    msg: "新增病历成功！"
-                });
-                historyAddEvent(ret.id);
-                api.closeWin();
-            } else {
-                alert("新增病历失败！");
-            }
-            hideProgress();
-        });
-    }
 }
 
 /**
@@ -221,19 +225,19 @@ function saveHistory() {
  * @return {[type]}      [description]
  */
 function openWin(type) {
-    var data = {};
+    var pageParam = {};
     alert(history_id);
     switch (type) {
         case 'patient':
-            page = "../patient/patient"
-            data = {
+            page = "patient/patient"
+            pageParam = {
                 "history_id": history_id,
                 "patient_id": patient_id
             };
             break;
         case 'physical':
-            page = "../physical/physical"
-            data = {
+            page = "physical/physical"
+            pageParam = {
                 "history_id": history_id,
                 "physical_id": physical_id
             };
@@ -243,11 +247,9 @@ function openWin(type) {
     }
     api.openWin({
         name: type,
-        url: './' + page + '.html',
-        pageParam: {
-            data: data
-        },
-        reload: true,
+        url: '../' + page + '.html',
+        pageParam: pageParam,
+        reload: false,
         bounces: false,
         vScrollBarEnabled: false,
         // animation: {
@@ -257,7 +259,6 @@ function openWin(type) {
         // }
     })
 }
-
 </script>
 
 </html>
