--- a/widget/html/history/historyList.html
+++ b/widget/html/history/historyList.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text/css" href="../../css/button.css" />
     <script type="text/javascript" src="../../script/api.js"></script>
     <script type="text/javascript" src="../../script/constants.js"></script>
-    <!-- <script type="text/javascript" src="widget://script/historyList.js"></script> -->
     <script type="text/javascript" src="../../script/util.js"></script>
     <!--     <script type="text/javascript" src="./script/historyDB.js"></script>
     <script type="text/javascript" src="./script/historySql.js"></script> -->
@@ -55,20 +54,20 @@ var apiready = function() {
     userName = $api.getStorage("userName");
 
     // 接收刷新列表event
-    // api.addEventListener({
-    //     name: 'historyAddEvent'
-    // }, function(ret, err) {
-    //     if (ret) {
-    //         loadList("refresh");
-    //     }
-    // });
-    // api.addEventListener({
-    //     name: 'historyModiEvent'
-    // }, function(ret, err) {
-    //     if (ret) {
-    //         loadList("refresh");
-    //     }
-    // });
+    api.addEventListener({
+        name: 'historyAddEvent'
+    }, function(ret, err) {
+        if (ret) {
+            loadList("refresh");
+        }
+    });
+    api.addEventListener({
+        name: 'historyModiEvent'
+    }, function(ret, err) {
+        if (ret) {
+            loadList("refresh");
+        }
+    });
 
     // 测试发现ios初始列表数组为空的话不加载UIListView，所以初始先一个空列表
     // var historyListData = [{
@@ -144,7 +143,7 @@ var apiready = function() {
     }, function(ret, err) {
         // 发现有时第一次打开不加载，所以设置了v_loaded_recors初始值为0，判断如果为0则进行一次加载
         if (v_loaded_recors == 0 || ret.eventType == "show") {
-            loadList(userName, per_page_num, "refresh");
+            loadList("refresh");
         }
 
         // 点击列表事件
@@ -222,38 +221,81 @@ var apiready = function() {
 
 }
 
-/**
- * [loadList 加载病历列表]
- * @param  {[type]} type [refresh: 刷新, append: 追加]
- * @return {[type]}      [description]
- */
-function loadList(userName, per_page_num, type, callback) {
-    var ret = getHistoryList(userName, per_page_num, type, function() {
-        var idx = 0;
-        var json_objs = [];
-        if (ret != undefined && ret.length > 0) {
-            while (ret[idx] != undefined) {
-                var historyItem = {
-                    history_id: ret[idx].id,
-                    title: ret[idx].patient_pointer.name + "   " + ret[idx].diagnosis,
-                    subTitle: ret[idx].patient_pointer.gender + " - " + ret[idx].patient_pointer.age + "岁 - " + ret[idx].consultation_department + " - " + ret[idx].record_date,
-                    remark: (ret[idx].patient_pointer.admission_number != "") ? (ret[idx].patient_pointer.admission_number + "(住)") : (ret[idx].patient_pointer.outpatient_number)
-                };
-                if (userName == "admin") {
-                    historyItem.subTitle = "记录: " + historyItem.record_doctor + " - " + historyItem.subTitle;
-                }
-                json_objs.push(historyItem);
-                idx = idx + 1;
-            }
-
+function loadList(type) {
+    showProgress("查询中...");
+    var model = api.require('model');
+    var query = api.require('query');
+    model.config({
+        appId: historyConstants.appId,
+        appKey: historyConstants.appKey,
+        host: historyConstants.host
+    });
+    query.createQuery(function(ret, err) {
+        if (ret && ret.qid) {
+            var queryId = ret.qid;
+            query.limit({
+                qid: queryId,
+                value: per_page_num
+            });
             if (type == "append") {
-                appendData(json_objs);
-            } else {
-                loadData(json_objs);
+                query.skip({
+                    qid: queryId,
+                    value: v_loaded_recors
+                });
             }
+            query.desc({
+                qid: queryId,
+                column: "updatedAt"
+            });
+            query.include({
+                qid: queryId,
+                column: 'patient_pointer'
+            });
+            if (userName != "admin") {
+                query.whereEqual({
+                    qid: queryId,
+                    column: 'record_doctor',
+                    value: userName
+                });
+            }
+            var json_objs = [];
+            model.findAll({
+                class: historyConstants.historyTable,
+                qid: queryId
+            }, function(ret, err) {
+                hideProgress();
+                if (err) {
+                    alert(JSON.stringify(err));
+                } else {
+                    if (ret) {
+                        var idx = 0;
+                        var json_objs = [];
+                        if (ret != undefined && ret.length > 0) {
+                            while (ret[idx] != undefined) {
+                                var historyItem = {
+                                    history_id: ret[idx].id,
+                                    title: ret[idx].patient_pointer.name + "   " + ret[idx].diagnosis,
+                                    subTitle: ret[idx].patient_pointer.gender + " - " + ret[idx].patient_pointer.age + "岁 - " + ret[idx].consultation_department + " - " + ret[idx].record_date,
+                                    remark: (ret[idx].patient_pointer.admission_number != "") ? (ret[idx].patient_pointer.admission_number + "(住)") : (ret[idx].patient_pointer.outpatient_number)
+                                };
+                                if (userName == "admin") {
+                                    historyItem.subTitle = "记录: " + historyItem.record_doctor + " - " + historyItem.subTitle;
+                                }
+                                json_objs.push(historyItem);
+                                idx = idx + 1;
+                            }
+
+                            if (type == "append") {
+                                appendData(json_objs);
+                            } else {
+                                loadData(json_objs);
+                            }
+                        }
+                    }
+                }
+            });
         }
     });
-
 }
 
 /**
