--- a/widget/html/physical/physicalFrame.html
+++ b/widget/html/physical/physicalFrame.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>体检信息维护</title>
-    <link rel="stylesheet" type="text/css" href="../css/history.css" />
-    <link rel="stylesheet" type="text/css" href="../css/button.css" />
-    <script type="text/javascript" src="../script/api.js"></script>
-    <script type="text/javascript" src="../script/util.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/history.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/button.css" />
+    <script type="text/javascript" src="../../script/api.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
+    <script type="text/javascript" src="../../script/util.js"></script>
 </head>
 
 <body class="body-silver">
@@ -163,7 +164,10 @@
  * @return {[type]} [description]
  */
 apiready = function() {
-    // 视力通过picker选择，不允许输入
+    window.closeWin = function(winName) {
+            api.closeWin();
+        }
+        // 视力通过picker选择，不允许输入
     $api.attr($api.byId('vod'), 'readonly', 'true');
     $api.attr($api.byId('vos'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vod'), 'readonly', 'true');
@@ -179,25 +183,33 @@ apiready = function() {
     model = api.require('model');
     query = api.require('query');
     model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
+        appId: historyConstants.appId,
+        appKey: historyConstants.appKey,
+        host: historyConstants.host
     });
 
-    history_id = api.pageParam.data.history_id;
-    physical_id = api.pageParam.data.id;
-    source = api.pageParam.data.source;
-    follow_up_id = api.pageParam.data.follow_up_id;
+    history_id = api.pageParam.history_id;
+    physical_id = api.pageParam.physical_id;
+    follow_up_id = api.pageParam.follow_up_id;
+    type = "modi";
+
+    if (history_id != undefined && history_id != null && history_id != "") {
+        source = "history";
+    } else {
+        source = "followup";
+    }
 
     // 如果主界面传入了id，代表修改，则从数据库查询已有数据
     if (physical_id != undefined && physical_id != null && physical_id != "") {
         showProgress();
+        type = "modi";
         query.createQuery(function(ret, err) {
             if (ret && ret.qid) {
                 model.findById({
-                    class: "physical",
+                    class: historyConstants.physicalTable,
                     id: physical_id
                 }, function(ret, err) {
+                    hideProgress();
                     if (err) {
                         alert(JSON.stringify(err));
                     } else {
@@ -205,15 +217,11 @@ apiready = function() {
                             setPhysical(ret);
                         }
                     }
-                    api.hideProgress();
                 });
             }
         });
     }
 
-    window.closeWin = function(winName) {
-        api.closeWin();
-    }
 }
 
 /**
@@ -221,12 +229,11 @@ apiready = function() {
  * @return {[type]} [description]
  */
 function savePhysical() {
-
     showProgress();
 
-    if (physical_id != "" && physical_id != undefined && physical_id != null) {
+    if (type == "modi") {
         model.updateById({
-            class: 'physical',
+            class: historyConstants.physicalTable,
             id: physical_id,
             value: {
                 vod: $api.byId('vod').value,
@@ -244,18 +251,17 @@ function savePhysical() {
                 eyeground: $api.byId('eyeground').value,
             }
         }, function(ret, err) {
+            hideProgress();
             if (ret) {
                 physicalModiEvent(ret.id);
-                hideProgress();
                 api.closeWin();
             } else {
-                alert("修改体检信息失败！" + JSON.stringify(err));
-                hideProgress();
+                alert("保存体检信息失败！" + JSON.stringify(err));
             }
         });
     } else {
         model.insert({
-            class: 'physical',
+            class: historyConstants.physicalTable,
             value: {
                 vod: $api.byId('vod').value,
                 vos: $api.byId('vos').value,
@@ -274,30 +280,33 @@ function savePhysical() {
         }, function(ret, err) {
             if (ret) {
                 physicalAddEvent(ret.id);
-                // 如果history_id不为空，表示从viewPhysical直接修改，而physical_id为空，则为新增，新增
-                // 之后还要将新生成的physical_id和history_id关联起来
-                if (history_id != "" && history_id != undefined && history_id != null) {
+                var db_class = "";
+                var db_id = "";
+                if (source == "history") {
+                    db_class = historyConstants.historyTable;
+                    db_id = history_id;
+                } else {
+                    db_class = historyConstants.followUpTable;
+                    db_id = follow_up_id;
+                }
+                if (history_id != "")
                     model.updateById({
-                        class: 'caseHistory',
-                        id: history_id,
+                        class: db_class,
+                        id: db_id,
                         value: {
                             physical_pointer: ret.id
                         }
                     }, function(ret, err) {
+                        hideProgress();
                         if (ret) {
-                            hideProgress();
                             api.closeWin();
                         } else {
-                            alert("新增体检信息失败！" + JSON.stringify(err));
-                            hideProgress();
+                            alert("保存体检信息失败！" + JSON.stringify(err));
                         }
                     });
-                }
-                hideProgress();
-                api.closeWin();
             } else {
-                alert("新增体检信息失败！" + JSON.stringify(err));
                 hideProgress();
+                alert("保存体检信息失败！" + JSON.stringify(err));
             }
         });
     }
